--- a/FinalExam/src/main/resources/app/view/Retirement.fxml
+++ b/FinalExam/src/main/resources/app/view/Retirement.fxml
@@ -50,12 +50,12 @@
          <children>
             <Label text="Save Each Month" />
             <Label text="Years to Work" GridPane.rowIndex="1" />
-            <Label text="Annual Return" GridPane.rowIndex="2" />
+            <Label prefHeight="17.0" prefWidth="107.0" text="Annual Return (%)" GridPane.rowIndex="2" />
             <Label text="What you need to save" GridPane.rowIndex="4" />
             <Label text="Years Retired" GridPane.rowIndex="6" />
-            <Label text="Annual Return" GridPane.rowIndex="7" />
-            <Label text="Required Income" GridPane.rowIndex="8" />
-            <Label text="Monthly SSI" GridPane.rowIndex="9" />
+            <Label prefHeight="17.0" prefWidth="99.0" text="Annual Return (%)" GridPane.rowIndex="7" />
+            <Label prefHeight="17.0" prefWidth="118.0" text="Required Income ($)" GridPane.rowIndex="8" />
+            <Label text="Monthly SSI ($)" GridPane.rowIndex="9" />
             <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="10">
                <children>
                   <Button mnemonicParsing="false" onAction="#btnClear" text="Clear">
@@ -73,6 +73,11 @@
                </GridPane.margin>
             </HBox>
             <TextField fx:id="txtYearsToWork" prefHeight="25.0" prefWidth="62.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="txtSavingAnnualReturn" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtYearsRetired" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="txtReturningAnnualReturn" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <TextField fx:id="txtRequiredIncome" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <TextField fx:id="txtMonthlySSI" GridPane.columnIndex="1" GridPane.rowIndex="9" />
          </children>
       </GridPane>
    </center>
