--- a/FinalExam/src/main/resources/app/view/Retirement.fxml
+++ b/FinalExam/src/main/resources/app/view/Retirement.fxml
@@ -78,6 +78,8 @@
             <TextField fx:id="txtReturningAnnualReturn" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <TextField fx:id="txtRequiredIncome" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <TextField fx:id="txtMonthlySSI" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label fx:id="labelAmountToSave" prefHeight="38.0" prefWidth="200.0" GridPane.columnIndex="1" />
+            <Label fx:id="labelTotalAmountSaved" prefHeight="36.0" prefWidth="200.0" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
    </center>
